welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: not found: value estSurOrange
while(!estSurOrange)
       ^Poucet:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if(nbPas = 5)
                 ^