welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while(!estSurOrange)
{
var nbBiscuits:Int = 0
var nbPas:Int = 0
for(c <- 1 to 5)
{
	avance()
	nbPas = nbPas + 1
}
	if(nbPas = 5)
	{
		if(nbBiscuits >= 3)
		{
			droite();
		}
		else
		{
			gauche()
		}
	}
}